--- a/notebooks/pandas.ipynb
+++ b/notebooks/pandas.ipynb
@@ -8,10 +8,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "- The *pandas* package is a important tool at the disposal of Data Scientists and Analysts working in Python today. \n",
     "\n",
@@ -156,6 +154,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Save DataFrame in .csv format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save DataFrame in .csv format\n",
+    "purchases.to_csv('purchases.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Reading data\n",
     "\n",
     "### Reading data from CSVs"
@@ -190,23 +205,6 @@
     "df = pd.read_csv('purchases.csv', index_col=0)\n",
     "\n",
     "df"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Converting back to a CSV"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# save DataFrame in .csv format\n",
-    "df.to_csv('new_purchases.csv')"
    ]
   },
   {
