--- a/notebooks/notebook7.ipynb
+++ b/notebooks/notebook7.ipynb
@@ -169,15 +169,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "arquivo.close()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -194,7 +185,7 @@
    "source": [
     "arquivo = open('grupos.txt', 'r')\n",
     "for linha in arquivo:\n",
-    "    print(linha)\n",
+    "    print(linha, end=\"\")\n",
     "arquivo.close()"
    ]
   },
@@ -213,9 +204,11 @@
    "outputs": [],
    "source": [
     "arquivo = open('grupos.txt', 'r')\n",
-    "linha = arquivo.readline()\n",
+    "linha1 = arquivo.readline()\n",
+    "linha2 = arquivo.readline()\n",
     "arquivo.close()\n",
-    "linha"
+    "print(linha1)\n",
+    "print(linha2)"
    ]
   },
   {
@@ -225,7 +218,7 @@
    "outputs": [],
    "source": [
     "arquivo = open('grupos.txt', 'r')\n",
-    "linhas = arquivo.readlines()\n",
+    "linhas = arquivo.readlines()[3]\n",
     "arquivo.close()\n",
     "linhas"
    ]
