--- a/notebooks/pandas.ipynb
+++ b/notebooks/pandas.ipynb
@@ -487,6 +487,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movies_df.shape"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -966,6 +975,17 @@
    "outputs": [],
    "source": [
     "movies_df['rating'].plot(kind='hist', title='Rating');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.integrate import quad\n",
+    "def integrand(x, a, b):\n",
+    "    return a*x**2 + b"
    ]
   },
   {
