--- a/notebooks/notebook3.ipynb
+++ b/notebooks/notebook3.ipynb
@@ -4,33 +4,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Variáveis e operadores"
+    "# Variáveis e operadores"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Tipos embutidos\n",
+    "\n",
     "- A função ${\\bf type()}$ verifica o tipo passado como argumento.\n",
     "- A função ${\\bf print()}$ imprime o valor passado como argumento."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "int"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "type(2) # verifica o tipo passado como argumento"
    ]
@@ -81,17 +72,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Variáveis"
+    "## Variáveis"
    ]
   },
   {
@@ -155,13 +139,8 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "### Instruções e scripts"
+    "## Instruções e scripts"
    ]
   },
   {
@@ -223,13 +202,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "x = 6\n",
     "y = 2\n",
@@ -240,17 +212,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Recebendo um valor externo ao código."
+    "## Recebendo um valor externo"
    ]
   },
   {
@@ -276,24 +241,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "numero = input('Digite um número: \\n')\n",
     "print('Número digitado: ', numero)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -315,11 +266,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Tipos booleanos"
+   ]
   },
   {
    "cell_type": "code",
