--- a/notebooks/notebook4.ipynb
+++ b/notebooks/notebook4.ipynb
@@ -4,19 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Comandos"
+    "# Comandos"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Comando ${\\bf input}$"
+    "## Comando **input**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,22 +28,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Comandos ${\\bf if, elif, else}$"
+    "## Comandos **if, elif, else**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "palpite errado!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if palpite == numero:\n",
     "    print(\"palpite correto!\")\n",
@@ -53,60 +45,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "bool(palpite == numero)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "int"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "type(numero)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "str"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "type(palpite)"
    ]
@@ -116,13 +75,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "numero = 22\n",
     "palpite = int(input(\"digite um numero: \"))"
@@ -130,17 +82,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "palpite correto!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if palpite == numero:\n",
     "    print(\"palpite correto!\")\n",
@@ -150,37 +94,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "bool(numero == palpite)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "palpite correto\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if (palpite == numero):\n",
     "    print(\"palpite correto\")\n",
@@ -191,37 +116,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### loop ${\\bf while}$"
+    "## loop ${\\bf while}$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x =  7\n",
-      "x =  6\n",
-      "x =  5\n",
-      "x =  4\n",
-      "x =  3\n",
-      "x =  2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = 7\n",
     "while(x > 1):\n",
@@ -231,17 +136,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "palpite correto\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "numero = 22\n",
     "qtd_tentativas = 5\n",
@@ -259,35 +156,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### loop ${\\bf for}$ e função ${\\bf range()}$"
+    "## loop ${\\bf for}$ e função ${\\bf range()}$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "intervalo [1,10), de 1 em 1 : 1, 2, 3, 4, 5, 6, 7, 8, 9, \n",
-      "\n",
-      "intervalo [1,10), de 2 em 2:: 1, 3, 5, 7, 9, \n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"intervalo [1,10), de 1 em 1 \", end = \": \")\n",
     "for t in range(1,10):\n",
@@ -305,21 +184,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "palpite correto\n"
-     ]
-    }
-   ],
    "source": [
     "numero = 22\n",
     "qtd_tentativas = 5\n",
@@ -333,13 +197,6 @@
     "    elif (palpite < numero):\n",
     "        print(\"palpite menor que o número\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
