--- a/notebooks/notebook2.ipynb
+++ b/notebooks/notebook2.ipynb
@@ -4,22 +4,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Instalação"
+    "# Instalação do python"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Imprimindo uma string.\n",
-    "- A função ${\\bf print()}$ imprime o valor passado como argumento."
+    "## Instalando o python\n",
+    "\n",
+    "- Veja o documento(do Drive) do link a seguir\n",
+    "\n",
+    "https://docs.google.com/document/d/1vKMrydUd_a1q-mjKzeqdNAuRNa-0pm-wDF9u__8NpPY/edit?usp=sharing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Imprimindo uma string\n",
+    "\n",
+    "- A função **print()** imprime o valor passado como argumento."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "programando em python!\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"programando em python!\")"
    ]
