--- a/notebooks/notebook_variaveis.ipynb
+++ b/notebooks/notebook_variaveis.ipynb
@@ -176,7 +176,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dif = x - y"
+    "sub = x - y"
    ]
   },
   {
@@ -194,7 +194,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"subtração = \", dif)"
+    "print(\"subtração = \", sub)"
    ]
   },
   {
