--- a/notebooks/notebook_comandos.ipynb
+++ b/notebooks/notebook_comandos.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,9 +33,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "palpite errado!\n"
+     ]
+    }
+   ],
    "source": [
     "if palpite == numero:\n",
     "    print(\"palpite correto!\")\n",
@@ -45,34 +53,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "bool(palpite == numero)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type(numero)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type(palpite)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,9 +123,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "palpite correto!\n"
+     ]
+    }
+   ],
    "source": [
     "if palpite == numero:\n",
     "    print(\"palpite correto!\")\n",
@@ -94,18 +143,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "bool(numero == palpite)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "palpite correto\n"
+     ]
+    }
+   ],
    "source": [
     "if (palpite == numero):\n",
     "    print(\"palpite correto\")\n",
@@ -113,6 +181,30 @@
     "    print(\"palpite maior que o número\")\n",
     "else:\n",
     "    print(\"palpite menor que o número\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "palpite correto\n"
+     ]
+    }
+   ],
+   "source": [
+    "numero = 22\n",
+    "palpite = int(input(\"digite um palpite: \"))\n",
+    "if (palpite == numero):\n",
+    "    print(\"palpite correto\")\n",
+    "elif (palpite > numero):\n",
+    "    print(\"palpite maior que o número\")\n",
+    "else:\n",
+    "    print(\"palpite menor que o número\")\n"
    ]
   },
   {
@@ -136,9 +228,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "palpite correto\n",
+      "palpite maior que o número\n",
+      "palpite maior que o número\n",
+      "palpite menor que o número\n",
+      "palpite menor que o número\n"
+     ]
+    }
+   ],
+   "source": [
+    "numero = 22\n",
+    "qtd_tentativas = 5\n",
+    "tmp = 1\n",
+    "while (tmp <= qtd_tentativas):\n",
+    "    palpite = int(input(\"digite um palpite: \"))\n",
+    "    if (palpite == numero):\n",
+    "        print(\"palpite correto\")\n",
+    "    elif (palpite > numero):\n",
+    "        print(\"palpite maior que o número\")\n",
+    "    else:\n",
+    "        print(\"palpite menor que o número\")\n",
+    "    tmp += 1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "palpite correto\n"
+     ]
+    }
+   ],
    "source": [
     "numero = 22\n",
     "qtd_tentativas = 5\n",
@@ -150,7 +282,7 @@
     "        break\n",
     "    elif (palpite > numero):\n",
     "        print(\"palpite maior que o número\")\n",
-    "    elif (palpite < numero):\n",
+    "    else:\n",
     "        print(\"palpite menor que o número\")\n",
     "    tmp += 1\n"
    ]
@@ -181,9 +313,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "palpite correto\n"
+     ]
+    }
+   ],
    "source": [
     "numero = 22\n",
     "qtd_tentativas = 5\n",
@@ -194,9 +334,16 @@
     "        break\n",
     "    elif (palpite > numero):\n",
     "        print(\"palpite maior que o número\")\n",
-    "    elif (palpite < numero):\n",
+    "    else:\n",
     "        print(\"palpite menor que o número\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
